# kausamemory-v3

./: .gitignore  README.md  pyproject.toml
examples/: demo.py
kausamemory/: __init__.py  chunking.py  console.py  mcp.py  sync.py
kausamemory/crypto/: blob.py
kausamemory/embed/: embedder.py
kausamemory/engine/: core.py  entities.py  reconcile.py  retriever.py
kausamemory/interfaces/: console_server.py  mcp_server.py  x402.py
kausamemory/solana/: head.py
kausamemory/storage/: arweave.py  base.py  ipfs.py  localfs.py  s3.py
kausamemory/stores/: database.py  vectors.py
solana-program/: Anchor.toml  README.md
solana-program/programs/kausamemory_head/: Cargo.toml
solana-program/programs/kausamemory_head/src/: lib.rs
tests/: eval_recall.py
