[project]
name = "kausamemory"
version = "3.0.0-alpha"
description = "A smart, self-sovereign memory layer for AI agents. Persistent, private, portable, adoptable."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "KausaLayer" }]

dependencies = [
    "sqlite-vec>=0.1.9",
    "blake3>=0.4",
    "cryptography>=42",
    "argon2-cffi>=23",
]

[project.scripts]
kausamemory-mcp = "kausamemory.mcp:main"

[project.optional-dependencies]
embed = ["fastembed>=0.3"]
mcp = ["mcp>=1.0"]
solana = ["solana>=0.34", "solders>=0.21", "anchorpy>=0.20"]
s3 = ["boto3>=1.34"]
http = ["requests>=2.31"]
dev = ["pytest>=8"]
all = ["fastembed>=0.3", "mcp>=1.0", "solana>=0.34", "solders>=0.21", "boto3>=1.34", "requests>=2.31"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["kausamemory*"]
